--- a/SportsSideKick/app/src/main/res/layout/activity_lounge_phone.xml
+++ b/SportsSideKick/app/src/main/res/layout/activity_lounge_phone.xml
@@ -19,6 +19,7 @@
             android:id="@+id/fragment_holder"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_below="@+id/left_top_bar_container"
             android:layout_above="@+id/side_menu_recycler"
             android:background="@color/gray_menu">
 
@@ -113,6 +114,13 @@
 
         </tv.sportssidekick.sportssidekick.util.ui.NoScrollRecycler>
 
+        <RelativeLayout
+            android:id="@+id/fragment_Popup_holder"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/transparent">
+        </RelativeLayout>
+
     </android.support.percent.PercentRelativeLayout>
 
     <android.support.percent.PercentRelativeLayout
@@ -122,7 +130,7 @@
         android:layout_gravity="end"
         android:background="@color/gray_menu"
         app:layout_widthPercent="50%">
-
+        <!--android:layout_gravity="end"-->
         <android.support.percent.PercentRelativeLayout
             android:id="@+id/drawer_container"
             android:layout_width="wrap_content"
@@ -139,92 +147,158 @@
                 android:onClick="onProfileClicked"
                 app:layout_heightPercent="14.5%">
 
+                <TextView
+
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginBottom="@dimen/margin_4"
+                    android:layout_marginTop="@dimen/margin_4"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:text="@string/go_to_profile"
+                    android:textAlignment="center"
+                    android:textColor="@color/colorPrimaryLight"
+                    android:textSize="@dimen/font_size_8" />
+
                 <RelativeLayout
+                    android:id="@+id/profile_info_holder"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:id="@+id/profile_info_holder"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentTop="true"
                     app:layout_widthPercent="50%">
-                    <ImageView
-                        android:id="@+id/profile_image"
-                        android:layout_width="@dimen/activity_lounge_user_profile_size"
-                        android:layout_height="@dimen/activity_lounge_user_profile_size"
-                        android:layout_centerInParent="true"
-                        android:layout_marginBottom="@dimen/padding_8"
-                        android:layout_marginLeft="@dimen/padding_8"
-                        android:layout_marginRight="@dimen/padding_8"
-                        android:adjustViewBounds="true"
-                        android:contentDescription="@string/image"
-                        android:padding="@dimen/padding_2"
-                        android:src="?profileImageIcon" />
 
                     <RelativeLayout
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_alignBottom="@id/profile_image"
-                        android:layout_alignEnd="@id/profile_image"
-                        android:layout_alignStart="@id/profile_image"
-                        android:layout_alignTop="@id/profile_image"
                         android:layout_centerInParent="true">
 
-                        <ProgressBar
-                            android:id="@+id/user_level_progress"
-                            style="?android:attr/progressBarStyleHorizontal"
+                        <ImageView
+                            android:id="@+id/profile_image"
+                            android:layout_width="@dimen/activity_lounge_user_profile_size"
+                            android:layout_height="@dimen/activity_lounge_user_profile_size"
+                            android:layout_centerInParent="true"
+                            android:layout_marginBottom="@dimen/padding_8"
+                            android:layout_marginLeft="@dimen/padding_8"
+                            android:layout_marginRight="@dimen/padding_8"
+                            android:adjustViewBounds="true"
+                            android:contentDescription="@string/image"
+                            android:padding="@dimen/padding_2"
+                            android:src="?profileImageIcon" />
+
+                        <RelativeLayout
+                            android:id="@+id/holder_progress_bar"
                             android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:background="?userLevelProgress"
-                            android:indeterminate="false"
-                            android:max="@integer/progress_bar_max"
-                            android:progress="@integer/progress_bar_60"
-                            android:progressDrawable="?circularProgressBarDrawable"
-                            android:visibility="invisible" />
+                            android:layout_height="wrap_content"
+                            android:layout_alignBottom="@id/profile_image"
+                            android:layout_alignEnd="@id/profile_image"
+                            android:layout_alignStart="@id/profile_image"
+                            android:layout_alignTop="@id/profile_image"
+                            android:layout_centerInParent="true">
+
+                            <ProgressBar
+                                android:id="@+id/user_level_progress"
+                                style="?android:attr/progressBarStyleHorizontal"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:background="?userLevelProgress"
+                                android:indeterminate="false"
+                                android:max="@integer/progress_bar_max"
+                                android:progress="@integer/progress_bar_60"
+                                android:progressDrawable="?circularProgressBarDrawable"
+                                android:visibility="invisible" />
+                        </RelativeLayout>
+
+                        <RelativeLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="@dimen/margin_negative_8"
+                            android:layout_below="@+id/holder_progress_bar"
+                            android:layout_centerHorizontal="true">
+
+                            <ImageView
+                                android:id="@+id/user_level_background"
+                                android:layout_width="@dimen/profile_level_marker_size"
+                                android:layout_height="@dimen/profile_level_marker_size"
+                                android:layout_centerHorizontal="true"
+                                android:layout_centerInParent="true"
+                                android:contentDescription="@string/image"
+                                android:src="?nextLevelMarkerIcon"
+                                android:visibility="invisible" />
+
+                            <TextView
+                                android:id="@+id/user_level"
+                                android:layout_width="@dimen/profile_level_marker_size"
+                                android:layout_height="@dimen/profile_level_marker_size"
+                                android:layout_centerInParent="true"
+                                android:gravity="center"
+                                android:textColor="@color/white"
+                                android:textSize="@dimen/font_size_10"
+                                android:textStyle="bold"
+                                android:visibility="invisible" />
+                        </RelativeLayout>
+
+
                     </RelativeLayout>
+
+
                 </RelativeLayout>
+
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    app:layout_widthPercent="50%"
-                    android:layout_toEndOf="@+id/profile_info_holder">
-                    <LinearLayout
+                    android:layout_toEndOf="@+id/profile_info_holder"
+                    app:layout_widthPercent="50%">
+
+                    <android.support.percent.PercentRelativeLayout
                         android:id="@+id/your_coins"
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentBottom="true"
-                        android:layout_alignParentStart="true"
-                        android:gravity="center_horizontal"
                         android:layout_centerInParent="true"
+                        android:gravity="center_horizontal"
                         android:orientation="vertical">
 
                         <ImageView
                             android:id="@+id/user_coin_icon"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="@dimen/margin_5"
-                            android:layout_marginLeft="@dimen/coin_lateral_margin"
-                            android:layout_marginRight="@dimen/coin_lateral_margin"
+                            android:layout_centerHorizontal="true"
                             android:adjustViewBounds="true"
-                            android:src="?userCoinIcon" />
+                            android:src="?userCoinIcon"
+                            app:layout_heightPercent="25%" />
 
                         <TextView
+                            android:id="@+id/you_have"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_below="@id/user_coin_icon"
+                            android:layout_centerHorizontal="true"
+                            android:layout_marginTop="@dimen/margin_4"
                             android:ellipsize="end"
                             android:maxLines="1"
                             android:text="@string/coins_caption"
-                            android:textColor="@color/white"
+                            android:textAlignment="center"
+                            android:textColor="@color/green_dark_3"
                             android:textSize="@dimen/font_size_8" />
 
                         <TextView
                             android:id="@+id/your_coins_value"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginBottom="@dimen/margin_10"
-                            android:layout_marginTop="@dimen/margin_5"
+                            android:layout_below="@id/you_have"
+                            android:layout_centerHorizontal="true"
                             android:ellipsize="end"
                             android:maxLines="1"
-                            android:textColor="?colorAccent"
+                            android:text="0"
+                            android:textAlignment="center"
+                            android:textColor="@color/light_colorPrimarySemiLight"
                             android:textSize="@dimen/font_size_12" />
 
-                    </LinearLayout>
+                    </android.support.percent.PercentRelativeLayout>
+
+
                 </RelativeLayout>
 
             </android.support.percent.PercentRelativeLayout>
@@ -233,6 +307,7 @@
                 android:id="@+id/menu_recycler_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
                 android:layout_below="@+id/profile"
                 android:layout_gravity="start"
                 android:background="@color/gray_menu"
