--- a/SportsSideKick/app/src/main/res/layout/popup_friend_profile_fragment.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_friend_profile_fragment.xml
@@ -2,10 +2,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginBottom="@dimen/margin_60"
-    android:layout_marginEnd="@dimen/margin_90"
-    android:layout_marginStart="@dimen/margin_90"
-    android:layout_marginTop="@dimen/margin_60"
+    android:layout_marginBottom="@dimen/margin_base_size_60"
+    android:layout_marginEnd="@dimen/margin_base_size_90"
+    android:layout_marginStart="@dimen/margin_base_size_90"
+    android:layout_marginTop="@dimen/margin_base_size_60"
     android:clickable="true">
 
     <!-- VIEW IN MIDDLE TO SPLIT EASIER -->
