--- a/SportsSideKick/app/src/main/res/layout/popup_login.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_login.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="@dimen/width_500"
     android:layout_height="match_parent"
-    android:layout_marginTop="@dimen/margin_60">
+    android:layout_marginTop="@dimen/margin_base_size_60">
 
     <!-- VIEW IN MIDDLE TO SPLIT EASIER -->
     <View
