--- a/SportsSideKick/app/src/main/res/layout/popup_your_followers.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_your_followers.xml
@@ -3,10 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="@dimen/width_500"
     android:layout_height="match_parent"
-    android:layout_marginBottom="@dimen/margin_60"
-    android:layout_marginEnd="@dimen/margin_90"
-    android:layout_marginStart="@dimen/margin_90"
-    android:layout_marginTop="@dimen/margin_60"
+    android:layout_marginBottom="@dimen/margin_base_size_60"
+    android:layout_marginEnd="@dimen/margin_base_size_90"
+    android:layout_marginStart="@dimen/margin_base_size_90"
+    android:layout_marginTop="@dimen/margin_base_size_60"
     android:clickable="true">
 
     <!-- TOP BUTTONS CONTAINER -->
