--- a/SportsSideKick/app/src/main/res/layout/popup_your_wallet.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_your_wallet.xml
@@ -3,10 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginBottom="@dimen/margin_60"
-    android:layout_marginEnd="@dimen/margin_90"
-    android:layout_marginStart="@dimen/margin_90"
-    android:layout_marginTop="@dimen/margin_60"
+    android:layout_marginBottom="@dimen/margin_base_size_60"
+    android:layout_marginEnd="@dimen/margin_base_size_90"
+    android:layout_marginStart="@dimen/margin_base_size_90"
+    android:layout_marginTop="@dimen/margin_base_size_60"
     android:clickable="true"
     tools:ignore="MissingPrefix">
 
