--- a/SportsSideKick/app/src/main/res/values-sw600dp/dimens.xml
+++ b/SportsSideKick/app/src/main/res/values-sw600dp/dimens.xml
@@ -1,7 +1,9 @@
 <resources>
 
     <!--for 7” tablets-->
-
+    <bool name="is_tablet">true</bool>
+    <dimen name="margin_base_size_90">90dp</dimen>
+    <dimen name="margin_base_size_60">60dp</dimen>
     <dimen name="activity_horizontal_margin">48dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="login_circle">10dp</dimen>
@@ -24,6 +26,7 @@
     <dimen name="margin_30">20dp</dimen>
     <dimen name="standard_button_height">48dp</dimen>
     <dimen name="standard_button_width_half">24dp</dimen>
+    <dimen name="margin_sharp_20">20dip</dimen>
 
     <dimen name="progress_bar_width">30dp</dimen>
     <dimen name="progress_bar_height">30dp</dimen>
