--- a/SportsSideKick/app/src/main/res/values-w480dp/dimens.xml
+++ b/SportsSideKick/app/src/main/res/values-w480dp/dimens.xml
@@ -1,5 +1,7 @@
 <resources>
-
+    <bool name="is_tablet">true</bool>
+    <dimen name="margin_base_size_90">90dp</dimen>
+    <dimen name="margin_base_size_60">60dp</dimen>
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="login_circle">10dp</dimen>
@@ -22,7 +24,7 @@
     <dimen name="margin_30">30dp</dimen>
     <dimen name="standard_button_height">48dp</dimen>
     <dimen name="standard_button_width_half">24dp</dimen>
-
+    <dimen name="margin_sharp_20">20dip</dimen>
     <dimen name="progress_bar_width">30dp</dimen>
     <dimen name="progress_bar_height">30dp</dimen>
 
