--- a/SportsSideKick/app/src/main/res/values-w820dp/dimens.xml
+++ b/SportsSideKick/app/src/main/res/values-w820dp/dimens.xml
@@ -2,6 +2,9 @@
     <!-- Example customization of dimensions originally defined in res/values/dimens.xml
          (such as screen margins) for screens with more than 820dp of available width. This
          would include 7" and 10" devices in landscape (~960dp and ~1280dp respectively). -->
+    <bool name="is_tablet">true</bool>
+    <dimen name="margin_base_size_90">90dp</dimen>
+    <dimen name="margin_base_size_60">60dp</dimen>
     <dimen name="activity_horizontal_margin">64dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="login_circle">10dp</dimen>
@@ -24,6 +27,7 @@
     <dimen name="margin_30">30dp</dimen>
     <dimen name="standard_button_height">48dp</dimen>
     <dimen name="standard_button_width_half">24dp</dimen>
+    <dimen name="margin_sharp_20">20dip</dimen>
 
     <dimen name="progress_bar_width">30dp</dimen>
     <dimen name="progress_bar_height">30dp</dimen>
