--- a/SportsSideKick/app/src/main/res/values/dimens.xml
+++ b/SportsSideKick/app/src/main/res/values/dimens.xml
@@ -1,5 +1,6 @@
 <resources>
     <!-- Default screen margins, per the Android Design guidelines. -->
+    <bool name="is_tablet">true</bool>
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="login_circle">10dp</dimen>
@@ -22,6 +23,9 @@
     <dimen name="margin_30">30dp</dimen>
     <dimen name="standard_button_height">48dp</dimen>
     <dimen name="standard_button_width_half">24dp</dimen>
+    <dimen name="margin_sharp_20">20dip</dimen>
+    <dimen name="margin_base_size_90">90dp</dimen>
+    <dimen name="margin_base_size_60">60dp</dimen>
 
     <dimen name="progress_bar_width">30dp</dimen>
     <dimen name="progress_bar_height">30dp</dimen>
@@ -177,6 +181,7 @@
     <dimen name="font_size_20">20sp</dimen>
     <dimen name="font_size_19">19sp</dimen>
     <dimen name="margin_negative_2">-2dp</dimen>
+    <dimen name="margin_negative_8">-8dp</dimen>
     <dimen name="padding_3">3dp</dimen>
     <dimen name="font_size_15">15sp</dimen>
     <dimen name="margin_2">2dp</dimen>
