--- a/SportsSideKick/app/src/main/res/drawable/circle_accent.xml
+++ b/SportsSideKick/app/src/main/res/drawable/circle_accent.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <solid
-        android:color="?attr/colorAccent" />
+        android:color="@color/colorAccent" />
 
     <size
         android:width="120dp"
