--- a/SportsSideKick/app/src/main/res/drawable/seek_bar_custom.xml
+++ b/SportsSideKick/app/src/main/res/drawable/seek_bar_custom.xml
@@ -15,7 +15,7 @@
         <clip>
             <shape>
                 <solid
-                    android:color="?attr/colorPrimaryLight"
+                    android:color="@color/colorPrimaryLight"
                     />
             </shape>
         </clip>
