--- a/SportsSideKick/app/src/main/res/layout/fragment_with_web_view.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_with_web_view.xml
@@ -22,7 +22,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/height_60"
-            android:background="@color/colorPrimary"
+            android:background="?webViewControlsBackground"
             android:orientation="horizontal">
 
             <RelativeLayout
