--- a/SportsSideKick/app/src/main/res/values/colors.xml
+++ b/SportsSideKick/app/src/main/res/values/colors.xml
@@ -113,7 +113,11 @@
     <color name="light_post_comment_background_color">#dbdbdb</color>
 
     <color name="light_green_main" >#00ab8d</color>
+    <color name="light_green_main_semi_tarnsparent" >#00ab8d</color>
 
-    <color name="video_chat_overlay">#a8e5e5e5</color>
+    <color name="video_chat_overlay">#a6959595</color>
+    <color name="video_chat_button_background">#c4c4c4</color>
+    <color name="video_chat_button_text_color">#4d4e4c</color>
 
+    <color name="player_background_color">#f6f7fa</color>
 </resources>
