--- a/SportsSideKick/app/src/main/res/values/styles.xml
+++ b/SportsSideKick/app/src/main/res/values/styles.xml
@@ -160,23 +160,36 @@
 
         <item name="chatHeadInfoContainer" >@color/colorAccentLight</item>
 
+        <item name="videoChatButtonStyle" >@style/button_call</item>
 
+        <item name="wallEditTextContainerBackground" >@color/green_dark_3</item>
+        <item name="wallEditSearchText" >@color/white</item>
+        <item name="wallEditSearchHint" >@color/colorPrimarySemiLight</item>
+
+        <item name="wallUserContentTextColor" >@color/white</item>
+
+        <item name="videoChatOverlay">@color/light_green_1_semitransparent</item>
+
+        <item name="webViewControlsBackground">@color/colorPrimary</item>
+
+        <item name="playerBackground">@color/colorPrimarySemiLight</item>
+        <item name="profileImageLoungeIcon">@drawable/blank_profile_rounded</item>
     </style>
 <!--*********************************************************************************************-->
     <style name="LightTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="themeName">@string/light_theme</item>
+
 
         <item name="android:windowAnimationStyle">@style/WindowAnimationTransition</item>
         <!--Colors-->
         <item name="colorPrimary">@color/light_colorPrimary</item>
         <item name="colorAccentLight">@color/light_colorAccentLight</item>
         <item name="colorAccent">@color/light_colorAccent</item>
-        <item name="colorControlNormal">@color/light_red</item>
-        <item name="colorControlActivated">@color/light_red</item>
-        <item name="colorControlHighlight">@color/light_red</item>
+        <item name="colorControlNormal">@color/colorPrimary</item>
+        <item name="colorControlActivated">@color/colorPrimary</item>
+        <item name="colorControlHighlight">@color/colorPrimary</item>
 
-        <item name="wallBackgroundColor">@color/light_red</item>
+        <item name="wallBackgroundColor">@color/facebook_blue</item>
 
         <item name="colorPrimarySemiLight">@color/light_colorPrimarySemiLight</item>
         <item name="colorPrimaryLight">@color/light_colorPrimaryLight</item>
@@ -317,6 +330,19 @@
 
         <item name="chatHeadInfoContainer" >@color/white</item>
 
+        <item name="videoChatButtonStyle" >@style/light_button_call</item>
+
+        <item name="wallEditTextContainerBackground" >@color/light_post_comment_background_color</item>
+        <item name="wallEditSearchText" >@color/light_post_comment_text_color</item>
+        <item name="wallEditSearchHint" >@color/light_post_comment_hint_color</item>
+
+        <item name="wallUserContentTextColor" >@color/light_green_main</item>
+        <item name="videoChatOverlay">@color/video_chat_overlay</item>
+
+        <item name="webViewControlsBackground">@color/light_green_main</item>
+        <item name="playerBackground">@color/player_background_color</item>
+
+        <item name="profileImageLoungeIcon">@drawable/light_blank_profile_rounded</item>
     </style>
 
     <!-- This will set the fade in animation on all your activities by default -->
@@ -348,6 +374,18 @@
         <item name="android:textColor">@drawable/button_onclick_change_text_color_login</item>
         <item name="android:textAllCaps">true</item>
         <item name="android:background">@drawable/button_call</item>
+        <item name="android:paddingLeft">40dp</item>
+        <item name="android:paddingRight">40dp</item>
+        <item name="android:paddingTop">8dp</item>
+        <item name="android:paddingBottom">8dp</item>
+        <item name="android:minHeight">0dp</item>
+        <item name="android:textSize">14sp</item>
+    </style>
+
+    <style name="light_button_call">
+        <item name="android:textColor">@drawable/button_onclick_change_text_color_login</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="android:background">@drawable/light_button_call</item>
         <item name="android:paddingLeft">40dp</item>
         <item name="android:paddingRight">40dp</item>
         <item name="android:paddingTop">8dp</item>
@@ -396,6 +434,7 @@
         <item name="android:background">@drawable/filter_toggle_button</item>
         <item name="android:layout_marginLeft">@dimen/margin_20</item>
         <item name="android:layout_marginRight">@dimen/margin_20</item>
+
         <item name="android:maxLines">1</item>
         <item name="android:ellipsize">end</item>
         <item name="android:layout_weight">1</item>
