--- a/SportsSideKick/app/src/main/res/layout-large/user_stats_item.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/user_stats_item.xml
@@ -8,12 +8,13 @@
         android:id="@+id/caption"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_margin="@dimen/margin_10"
         android:layout_weight="1"
         android:ellipsize="end"
         android:gravity="end"
         android:lines="1"
         android:text="@string/caption_low"
-        android:textColor="?colorAccent" />
+        android:textColor="@color/white" />
 
     <TextView
         android:id="@+id/value"
@@ -25,5 +26,5 @@
         android:gravity="center_vertical"
         android:lines="1"
         android:text="@string/value"
-        android:textColor="@color/white" />
+        android:textColor="?colorAccent" />
 </LinearLayout>
