--- a/SportsSideKick/app/src/main/res/layout/activity_lounge_phone.xml
+++ b/SportsSideKick/app/src/main/res/layout/activity_lounge_phone.xml
@@ -94,7 +94,16 @@
                 android:scaleType="fitCenter"
                 android:src="@drawable/icon_friends" />
 
-
+            <TextView
+                android:id="@+id/notification_number"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:text="5"
+                android:textColor="@color/white"
+                android:textSize="@dimen/font_size_12"
+                android:textStyle="bold"
+                android:visibility="gone"/>
             <RelativeLayout
                 android:id="@+id/left_notification_container"
                 android:layout_width="0dp"
@@ -134,6 +143,7 @@
         <android.support.percent.PercentRelativeLayout
             android:id="@+id/drawer_container"
             android:layout_width="wrap_content"
+            android:layout_marginEnd="@dimen/margin_negative_2"
             android:layout_height="match_parent"
             android:background="@color/gray_menu">
 
@@ -253,7 +263,7 @@
                     app:layout_widthPercent="50%">
 
                     <android.support.percent.PercentRelativeLayout
-                        android:id="@+id/your_coins"
+                        android:id="@+id/your_coinss"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerInParent="true"
