--- a/SportsSideKick/app/src/main/res/layout-large/row_rumours_big.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/row_rumours_big.xml
@@ -17,14 +17,13 @@
             android:layout_alignBottom="@+id/fragment_rumors_single_rumour_info_container"
             android:layout_alignParentTop="true"
             android:background="@drawable/rumour_headerz"
-            app:angle="90">
+            app:angle="90"> <!-- Specify rotate angle here -->
 
             <TextView
                 android:id="@+id/fragment_rumors_single_rumour_headline"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:textSize="@dimen/font_size_12"
                 android:paddingBottom="@dimen/padding_12"
                 android:paddingEnd="@dimen/padding_8"
                 android:paddingStart="@dimen/padding_8"
@@ -43,12 +42,11 @@
                 android:id="@+id/fragment_rumors_single_rumour_info"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
+                android:layout_alignParentTop="true"
                 android:ellipsize="end"
                 android:isScrollContainer="false"
-                android:textSize="@dimen/font_size_11"
-                android:maxLines="2"
-                android:minLines="2"
+                android:maxLines="3"
+                android:minLines="3"
                 android:padding="@dimen/padding_8"
                 android:textColor="?wallItemTipTextContentColor" />
 
@@ -57,11 +55,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
-                android:textSize="@dimen/font_size_11"
                 android:layout_below="@id/fragment_rumors_single_rumour_info"
                 android:ellipsize="end"
                 android:maxLines="1"
                 android:padding="@dimen/padding_8"
+                android:singleLine="true"
                 android:textColor="?rumoursTimeTextColor" />
         </RelativeLayout>
     </RelativeLayout>
