--- a/SportsSideKick/app/src/main/res/layout/activity_lounge_phone.xml
+++ b/SportsSideKick/app/src/main/res/layout/activity_lounge_phone.xml
@@ -68,6 +68,8 @@
                 android:layout_toEndOf="@+id/logo"
                 android:layout_toStartOf="@+id/notification_open"
                 android:ellipsize="end"
+                android:textSize="@dimen/font_size_10"
+                android:layout_marginBottom="@dimen/half_margin"
                 android:maxLines="1"
                 android:paddingBottom="@dimen/half_margin"
                 android:textColor="?light_green_1" />
