--- a/SportsSideKick/app/src/main/res/values-hdpi/dimens.xml
+++ b/SportsSideKick/app/src/main/res/values-hdpi/dimens.xml
@@ -5,4 +5,5 @@
 
     <dimen name="margin_sharp_20">0dp</dimen>
     <bool name="is_tablet">false</bool>
+    <dimen name="rumours_top_image_heihgt">153dp</dimen>
 </resources>
