--- a/SportsSideKick/app/src/main/res/values-xxxhdpi/dimens.xml
+++ b/SportsSideKick/app/src/main/res/values-xxxhdpi/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="margin_base_size_60">0dp</dimen>
     <dimen name="margin_sharp_20">0dp</dimen>
     <bool name="is_tablet">false</bool>
+    <dimen name="rumours_top_image_heihgt">153dp</dimen>
 </resources>
