--- a/SportsSideKick/app/src/main/res/layout/activity_lounge_phone.xml
+++ b/SportsSideKick/app/src/main/res/layout/activity_lounge_phone.xml
@@ -28,10 +28,10 @@
         <RelativeLayout
             android:id="@+id/left_top_bar_container"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="@dimen/height_48"
             android:background="@android:color/transparent"
-            app:layout_heightPercent="7%">
-
+           >
+            <!--app:layout_heightPercent="7%"-->
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -53,6 +53,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_above="@+id/scrolling_news_title"
+                android:layout_marginBottom="@dimen/margin_5"
                 android:layout_toEndOf="@+id/logo"
                 android:layout_toStartOf="@+id/notification_open"
                 android:textAllCaps="true"
@@ -126,10 +127,22 @@
         </tv.sportssidekick.sportssidekick.util.ui.NoScrollRecycler>
 
         <RelativeLayout
-            android:id="@+id/fragment_Popup_holder"
+            android:id="@+id/fragment_popup_holder"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/transparent">
+            android:background="@color/transparent"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true">
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/fragment_left_popup_holder"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/transparent"
+            android:layout_alignParentTop="true"
+            android:layout_above="@+id/side_menu_recycler"
+            android:layout_alignParentStart="true">
         </RelativeLayout>
 
     </android.support.percent.PercentRelativeLayout>
@@ -265,7 +278,7 @@
                     app:layout_widthPercent="50%">
 
                     <android.support.percent.PercentRelativeLayout
-                        android:id="@+id/your_coinss"
+                        android:id="@+id/your_coins"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerInParent="true"
@@ -329,6 +342,7 @@
                 android:overScrollFooter="@android:color/transparent">
 
             </android.support.v7.widget.RecyclerView>
+
         </android.support.percent.PercentRelativeLayout>
 
     </android.support.percent.PercentRelativeLayout>
