--- a/SportsSideKick/app/src/main/res/values-xxhdpi/dimens.xml
+++ b/SportsSideKick/app/src/main/res/values-xxhdpi/dimens.xml
@@ -6,4 +6,5 @@
     <dimen name="margin_sharp_20">0dp</dimen>
     <bool name="is_tablet">false</bool>
     <dimen name="rumours_top_image_heihgt">153dp</dimen>
+    <dimen name="friend_item_image">45dp</dimen>
 </resources>
