Optimized png resources.

--- a/SportsSideKick/app/src/sportsidekick/res/layout/row_add_friend.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/row_add_friend.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content" android:layout_height="wrap_content">
-
     <ImageView
         android:id="@+id/row_add_friend_image"
         android:layout_width="@dimen/row_chat_bubble_user_size"
@@ -9,6 +8,5 @@
         android:layout_centerHorizontal="true"
         android:background="@null"
         android:scaleType="centerCrop"
-        android:src="@drawable/add_chat_user"/>
-
+        android:src="@drawable/add_chat_user"/>  <!-- TODO @Nemanja Why blank space in png image ? -->
 </RelativeLayout>
