Refactoring - moved some resources back to drawable folder - TODO Acquire proper resources with bigger resolution.

--- a/SportsSideKick/app/src/sportsidekick/res/layout/activity_lounge.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/activity_lounge.xml
@@ -161,7 +161,7 @@
                 android:layout_alignParentTop="true">
 
                 <ImageView
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="@dimen/top_bar_notification_image_size"
                     android:layout_centerInParent="true"
                     android:adjustViewBounds="true"
