--- a/SportsSideKick/app/src/sportsidekick/res/layout/fragment_with_web_view.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/fragment_with_web_view.xml
@@ -21,7 +21,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/height_60"
+            android:layout_height="@dimen/height_40"
             android:background="?webViewControlsBackground"
             android:orientation="horizontal">
 
@@ -32,8 +32,8 @@
 
                 <ImageView
                     android:id="@+id/back_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:layout_centerInParent="true"
                     android:layout_margin="@dimen/margin_10"
                     android:adjustViewBounds="true"
@@ -47,8 +47,8 @@
 
                 <ImageView
                     android:id="@+id/home_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:layout_centerInParent="true"
                     android:layout_margin="@dimen/margin_10"
                     android:adjustViewBounds="true"
@@ -63,8 +63,8 @@
 
                 <ImageView
                     android:id="@+id/share_to_wall_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:layout_centerInParent="true"
                     android:layout_margin="@dimen/margin_10"
                     android:adjustViewBounds="true"
@@ -79,8 +79,8 @@
 
                 <ImageView
                     android:id="@+id/forward_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:layout_centerInParent="true"
                     android:layout_margin="@dimen/margin_10"
                     android:adjustViewBounds="true"
