Popup edits profile optimize for telephone

--- a/SportsSideKick/app/src/main/res/values/colors.xml
+++ b/SportsSideKick/app/src/main/res/values/colors.xml
@@ -1,4 +1,2 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
-    <color name="green_dark_5">#00181e</color>
-</resources>
+<resources></resources>
