--- a/SportsSideKick/app/src/sportsidekick/res/layout/activity_lounge_phone.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/activity_lounge_phone.xml
@@ -36,8 +36,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:alpha="0.7"
-                android:scaleType="centerCrop"
-                android:src="@drawable/login_default_bg" />
+                android:background="@drawable/lounge_background"
+                android:tileMode="repeat"
+                />
 
             <ImageView
                 android:id="@+id/logo"
