--- a/SportsSideKick/app/src/sportsidekick/res/layout/popup_your_friends.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/popup_your_friends.xml
@@ -16,7 +16,8 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/standard_button_height"
         android:layout_alignParentTop="true"
-        android:background="?colorPrimarySemiLight"
+        android:background="@drawable/lounge_background"
+        android:tileMode="repeat"
         android:orientation="horizontal">
 
         <TextView
@@ -35,10 +36,7 @@
             android:layout_width="@dimen/standard_button_height"
             android:layout_height="@dimen/standard_button_height"
             android:layout_alignParentEnd="true"
-            android:adjustViewBounds="true"
-
             android:background="@android:color/transparent"
-            android:scaleType="centerInside"
             android:src="?closeIcon"
             android:tint="@color/light_colorPrimaryLight" />
     </RelativeLayout>
@@ -192,7 +190,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
         android:background="?green_dark_2"
-        android:layout_marginBottom="@dimen/margin_negative_15"
+        android:layout_marginBottom="@dimen/margin_negative_10"
         android:clickable="true"
         app:layout_heightPercent="19%">
 
