--- a/SportsSideKick/app/src/sportsidekick/res/values-xhdpi/dimens.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/values-xhdpi/dimens.xml
@@ -10,4 +10,5 @@
     <dimen name="popup_friend_profil_profile_image_size">72dp</dimen>
     <dimen name="popup_friend_profil_progress_bar_size">85dp</dimen>
     <dimen name="popup_friend_profil_progress_hex_bar_size">62dp</dimen>
+    <dimen name="edit_profile_label_text_size">114dp</dimen>
 </resources>
