--- a/SportsSideKick/app/src/sportsidekick/res/values/colors.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/values/colors.xml
@@ -47,6 +47,7 @@
 
     <!--Phone Color-->
     <color name="gray_menu">#d3d4d8</color>
+    <color name="green_light_3">#255d5e</color>
     <!--*****************************************************************************************-->
     <!--Light Theme-->
     <color name="light_colorAccent">#ffe324</color>
