--- a/SportsSideKick/app/src/sportsidekick/res/layout/fragment_wall.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/fragment_wall.xml
@@ -3,7 +3,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/root_wall"
     android:background="?wallBackground"
     tools:context="base.app.fragment.instance.WallFragment">
 
@@ -22,6 +21,10 @@
         android:layout_height="match_parent"
         app:srl_direction="bottom"
         android:layout_above="@+id/fragment_wall_bottom_bar">
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/fragment_wall_recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 
     </com.orangegangsters.github.swipyrefreshlayout.library.SwipyRefreshLayout>
 
@@ -241,12 +244,4 @@
             android:background="@drawable/wall_search_selector" />
 
     </RelativeLayout>
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/fragment_wall_recycler_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/fragment_wall_bottom_bar"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true" />
 </RelativeLayout>
