--- a/SportsSideKick/app/src/sportsidekick/res/layout/popup_add_friend.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/popup_add_friend.xml
@@ -1,13 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="@dimen/width_500"
-    android:layout_height="wrap_content"
-    android:layout_marginBottom="@dimen/margin_base_size_60"
-    android:layout_marginEnd="@dimen/margin_base_size_90"
-    android:layout_marginStart="@dimen/margin_base_size_90"
-    android:layout_marginTop="@dimen/margin_base_size_60"
-    android:background="@drawable/popup_bottom_background"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="?colorAccentLight"
     android:clickable="true">
 
     <!-- TOP BUTTONS CONTAINER -->
@@ -15,101 +11,160 @@
         android:id="@+id/top_buttons_container"
         android:layout_width="match_parent"
         android:layout_height="@dimen/standard_button_height"
-        android:orientation="horizontal"
         android:layout_alignParentTop="true"
-        android:layout_toEndOf="@+id/friends_list">
-
-        <View
-            android:id="@+id/top_vertical_spliter"
-            android:layout_width="@dimen/space_0"
-            android:layout_height="@dimen/standard_button_height"
-            android:layout_centerHorizontal="true" />
+        android:background="@drawable/lounge_background"
+        android:orientation="horizontal"
+        android:tileMode="repeat">
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/standard_button_height"
-            android:layout_toStartOf="@+id/top_vertical_spliter"
-            android:background="?colorPrimarySemiLight"
-            android:gravity="center"
-            android:text="@string/add_friend"
-            android:textColor="?colorAccent" />
+            style="@style/boldText"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_centerInParent="true"
+            android:layout_marginEnd="1dp"
+            android:gravity="center_vertical"
+            android:text="@string/friends"
+            android:textColor="?white"
+            android:textSize="@dimen/font_size_18" />
 
-        <TextView
-            android:id="@+id/invite_friend_button"
-            android:layout_width="match_parent"
+        <ImageButton
+            android:id="@+id/close_dialog_button"
+            android:layout_width="@dimen/standard_button_height"
             android:layout_height="@dimen/standard_button_height"
-            android:layout_toEndOf="@+id/top_vertical_spliter"
-            android:background="?colorAccentLight"
-            android:gravity="center"
-            android:text="@string/invite_friend"
-            android:textColor="?white_semitransparent" />
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:background="@android:color/transparent"
+            android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
+            android:tint="@color/light_colorPrimaryLight" />
+    </RelativeLayout>
+
+
+    <LinearLayout
+        android:id="@+id/center_split"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/height_1"
+        android:layout_below="@+id/top_buttons_container"
+        android:layout_centerHorizontal="true"
+        android:background="?colorPrimaryLight">
 
         <View
             android:layout_width="match_parent"
             android:layout_height="@dimen/height_2"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_toStartOf="@+id/top_vertical_spliter"
+            android:layout_marginEnd="@dimen/margin_1"
+            android:layout_weight="1"
+            android:background="?colorPrimaryLight" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/height_2"
+            android:layout_marginEnd="@dimen/margin_1"
+            android:layout_weight="1"
             android:background="?colorAccent" />
 
         <View
             android:layout_width="match_parent"
             android:layout_height="@dimen/height_2"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_toEndOf="@+id/top_vertical_spliter"
+            android:layout_weight="1"
             android:background="?colorPrimaryLight" />
-    </RelativeLayout>
+    </LinearLayout>
+    <!-- TOP BUTTONS CONTAINER -->
+    <LinearLayout
+        android:id="@+id/top_container"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/standard_button_height"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/center_split"
+        android:background="@color/green_dark_4"
+        android:orientation="horizontal">
 
+        <TextView
+            android:id="@+id/your_friends_open_button"
+            android:layout_width="@dimen/space_0"
+            android:layout_height="match_parent"
+            android:layout_marginEnd="@dimen/margin_1"
+            android:layout_weight="1"
+            android:background="?green_dark_2"
+            android:gravity="center"
+            android:text="@string/friends"
+            android:textColor="?white" />
+
+        <TextView
+            android:id="@+id/add_friend"
+            android:layout_width="@dimen/space_0"
+            android:layout_height="match_parent"
+            android:layout_marginEnd="@dimen/margin_1"
+            android:layout_weight="1"
+            android:background="?colorAccentLight"
+            android:gravity="center"
+            android:text="@string/find"
+            android:textColor="?white" />
+
+        <TextView
+            android:id="@+id/friend_requests"
+            android:layout_width="@dimen/space_0"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="?green_dark_2"
+            android:gravity="center"
+            android:text="@string/request"
+            android:textColor="?white" />
+    </LinearLayout>
+
+    <View
+        android:id="@+id/spliter_profile"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/height_2"
+        android:layout_below="@+id/top_container"
+        android:background="@color/green_dark_3" />
 
     <RelativeLayout
-        android:id="@+id/enter_friend_name"
+        android:id="@+id/search_container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/top_buttons_container"
-        android:padding="@dimen/margin_20"
-        android:visibility="visible">
+        android:layout_height="@dimen/height_48"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/spliter_profile"
+        android:background="@color/green_dark_phone_4">
+
 
         <EditText
             android:id="@+id/add_friend_name"
-            style="@style/edit_text_login"
-            android:layout_width="@dimen/width_290"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:ellipsize="end"
-            android:hint="@string/add_friend_hint"
-            android:inputType="text"
-            android:maxLines="1"
-            android:textAlignment="textStart" />
-
-        <TextView
-            android:id="@+id/caption_label"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_marginEnd="@dimen/margin_10"
-            android:layout_toStartOf="@id/add_friend_name"
-            android:maxLines="2"
-            android:text="@string/add_friend_hint"
-            android:textColor="?wall_shop_description_background" />
+            android:layout_centerVertical="true"
+            android:layout_marginStart="@dimen/margin_10"
+            android:layout_toStartOf="@+id/search_icon"
+            android:background="@null"
+            android:hint="@string/your_friends_search_hint"
+            android:imeOptions="actionDone"
+            android:inputType="text"
+            android:maxLines="1"
+            android:textColor="?white"
+            android:textColorHint="?white_semitransparent"
+            android:textSize="@dimen/font_size_12" />
 
-
+        <ImageView
+            android:id="@+id/search_icon"
+            android:layout_width="@dimen/height_48"
+            android:layout_height="@dimen/height_48"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:background="?colorPrimaryLight"
+            android:scaleType="centerInside"
+            android:src="@drawable/icon_search" />
     </RelativeLayout>
 
-    <!-- FRIENDS  LIST-->
     <RelativeLayout
         android:id="@+id/friends_list"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/height_150"
-        android:layout_below="@id/enter_friend_name"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/bottom_buttons_container"
+        android:layout_below="@+id/search_container"
         android:visibility="gone">
 
-        <View
-            android:id="@+id/top_split_line"
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/people_recycler_view"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/height_1"
-            android:layout_alignParentTop="true"
-            android:background="@android:color/black" />
+            android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/no_result"
@@ -120,21 +175,76 @@
             android:textColor="?white_semitransparent"
             android:visibility="gone" />
 
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/special_list_holder"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/bottom_buttons_container"
+        android:layout_below="@+id/search_container">
+
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/people_recycler_view"
+            android:id="@+id/special_recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/no_result_special"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="@string/no_result"
+            android:textColor="?white_semitransparent"
+            android:visibility="gone" />
+
+    </RelativeLayout>
+
+
+    <RelativeLayout
+        android:id="@+id/bottom_buttons_container"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/edit_profile_label_text_size"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="@dimen/margin_negative_10"
+        android:background="?green_dark_2"
+        android:clickable="true">
+
+        <TextView
+            android:id="@+id/official_account"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="@dimen/margin_4"
+            android:layout_marginTop="@dimen/margin_4"
+            android:gravity="center"
+            android:text="@string/friends_you_have_in_common"
+            android:textColor="?white"
+            android:textSize="@dimen/font_size_12" />
+
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginBottom="@dimen/margin_10"
-            android:layout_marginLeft="@dimen/margin_10"
-            android:layout_marginRight="@dimen/margin_10"
-            android:layout_marginTop="@dimen/margin_20" />
+            android:layout_below="@+id/official_account">
 
-        <com.wang.avi.AVLoadingIndicatorView
-            android:id="@+id/progress_bar"
-            android:layout_width="@dimen/prodgres_bar"
-            android:layout_height="@dimen/prodgres_bar"
-            android:layout_centerInParent="true"
-            android:elevation="@dimen/elevation_2"
-            app:indicatorName="LineSpinFadeLoaderIndicator" />
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/common_friend_list"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+            </android.support.v7.widget.RecyclerView>
+        </RelativeLayout>
+
     </RelativeLayout>
+
+
+    <com.wang.avi.AVLoadingIndicatorView
+        android:id="@+id/progress_bar"
+        android:layout_width="@dimen/prodgres_bar"
+        android:layout_height="@dimen/prodgres_bar"
+        android:layout_centerInParent="true"
+        android:elevation="@dimen/elevation_2"
+        app:indicatorName="LineSpinFadeLoaderIndicator" />
+
 </RelativeLayout>
