--- a/SportsSideKick/app/src/sportsidekick/res/layout/popup_edit_chat.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/popup_edit_chat.xml
@@ -11,7 +11,9 @@
         android:id="@+id/headline_container"
         android:layout_width="match_parent"
         android:layout_height="@dimen/standard_button_height"
-        android:clickable="true">
+        android:clickable="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true">
 
         <ImageButton
             android:id="@+id/close"
