--- a/SportsSideKick/app/src/sportsidekick/res/layout/popup_your_friends.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/popup_your_friends.xml
@@ -35,10 +35,11 @@
             android:id="@+id/close_dialog_button"
             android:layout_width="@dimen/standard_button_height"
             android:layout_height="@dimen/standard_button_height"
-            android:layout_alignParentEnd="true"
             android:background="@android:color/transparent"
-            android:src="?closeIcon"
-            android:tint="@color/light_colorPrimaryLight" />
+            android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
+            android:tint="@color/light_colorPrimaryLight"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true" />
     </RelativeLayout>
 
 
@@ -126,23 +127,23 @@
         android:layout_height="@dimen/height_48"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/spliter_profile"
-        android:background="@drawable/popup_bottom_left_background">
+        android:background="@color/green_dark_phone_4">
 
 
         <EditText
             android:id="@+id/search_edit_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginStart="@dimen/margin_10"
-            android:background="?green_dark_2"
+            android:background="@color/green_dark_phone_4"
+            android:textColor="?white"
             android:hint="@string/your_friends_search_hint"
-            android:layout_toStartOf="@+id/search_icon"
             android:imeOptions="actionDone"
             android:inputType="text"
             android:maxLines="1"
             android:textColorHint="?white_semitransparent"
-            android:textSize="@dimen/font_size_12" />
+            android:textSize="@dimen/font_size_12"
+            android:layout_centerVertical="true"
+            android:layout_toStartOf="@+id/search_icon" />
 
         <ImageView
             android:id="@+id/search_icon"
