--- a/SportsSideKick/app/src/sportsidekick/res/layout/comment_item.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/comment_item.xml
@@ -23,12 +23,13 @@
             android:id="@+id/post_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:layout_marginTop="@dimen/margin_5"
             android:layout_marginEnd="@dimen/margin_15"
-            android:text="@string/comment_text"
+            android:layout_marginTop="@dimen/margin_5"
+            android:background="?chatBubbleIcon"
             android:minLines="1"
-            android:background="?chatBubbleIcon"/>
+            android:text="@string/comment_text"
+            android:textAlignment="viewStart"
+            android:textColor="@color/white" />
 
         <TextView
             android:id="@+id/message_information"
