--- a/SportsSideKick/app/src/sportsidekick/res/layout/friend_request_item.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/friend_request_item.xml
@@ -1,75 +1,73 @@
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_marginBottom="@dimen/margin_20"
-    android:layout_height="@dimen/height_60">
-
-    <ImageView
-        android:id="@+id/profile_image"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="@dimen/margin_20"
-        android:layout_centerHorizontal="true"
-        android:src="?profileImageIcon"
-        android:scaleType="centerCrop"
-        android:adjustViewBounds="true"/>
+    android:background="?green_dark_1"
+    android:layout_height="@dimen/height_60"
+    >
 
     <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_marginStart="@dimen/margin_20"
-        android:layout_toEndOf="@+id/profile_image"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true">
-    <TextView
-        android:id="@+id/name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/white"/>
-    <TextView
-        android:id="@+id/date_prefix"
-        android:layout_below="@+id/name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/white"
-        android:text="@string/requested_on"/>
-    <TextView
-        android:id="@+id/date"
-        android:layout_width="wrap_content"
-        android:layout_marginStart="@dimen/margin_5"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/name"
-        android:layout_toEndOf="@+id/date_prefix"
-        android:textColor="@color/white"/>
+        android:id="@+id/image_holder"
+        android:layout_width="@dimen/height_35"
+        android:layout_height="@dimen/height_35"
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true"
+        android:layout_margin="@dimen/margin_14">
+
+        <ImageView
+            android:id="@+id/profile_image"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerInside"
+            android:src="?profileImageIcon" />
+
     </RelativeLayout>
 
     <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_height="@dimen/popup_language_bottom_buttons_container_height"
+        android:layout_marginStart="@dimen/margin_20"
+        android:layout_toEndOf="@+id/image_holder"
+        android:layout_toStartOf="@+id/button_friend_accept"
+        android:layout_height="wrap_content"
         android:layout_centerVertical="true">
+        <TextView
+            android:id="@+id/name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"/>
+        <TextView
+            android:id="@+id/date_prefix"
+            android:layout_below="@+id/name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:text="@string/requested_on"/>
+        <TextView
+            android:id="@+id/date"
+            android:layout_width="wrap_content"
+            android:layout_marginStart="@dimen/margin_5"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/name"
+            android:layout_toEndOf="@+id/date_prefix"
+            android:textColor="@color/white"/>
+    </RelativeLayout>
 
     <ImageButton
-        android:id="@+id/deny_button"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_toStartOf="@+id/confirm_button"
-        android:layout_centerVertical="true"
-        android:layout_marginBottom="@dimen/margin_30"
-        android:layout_marginEnd="@dimen/margin_10"
-        android:background="@null"
-        android:scaleType="centerInside"
-        android:src="@drawable/remove_button" />
-
-    <ImageButton
-        android:id="@+id/confirm_button"
+        android:id="@+id/button_friend"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
-        android:layout_marginBottom="@dimen/margin_30"
-        android:layout_marginEnd="@dimen/margin_10"
         android:background="@null"
         android:scaleType="centerInside"
-        android:src="@drawable/friend_request_accept" />
-    </RelativeLayout>
+        android:layout_marginTop="@dimen/margin_16"
+        android:layout_marginBottom="@dimen/margin_16"
+        app:srcCompat="@drawable/add_friends_selector" />
+    <View
+        android:layout_width="match_parent"
+        android:layout_alignParentBottom="true"
+        android:layout_height="@dimen/height_1"
+        android:background="@color/black"
+        />
+
+
 </RelativeLayout>
