Stash fragment, optimize for telephone

--- a/SportsSideKick/app/src/sportsidekick/res/layout/popup_your_wallet.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/popup_your_wallet.xml
@@ -7,7 +7,7 @@
     android:layout_marginEnd="@dimen/margin_base_size_90"
     android:layout_marginStart="@dimen/margin_base_size_90"
     android:layout_marginTop="@dimen/margin_base_size_60"
-    android:background="@color/green_dark_2"
+    android:background="?wallBackground"
     android:clickable="true"
     tools:ignore="MissingPrefix">
 
@@ -20,7 +20,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/standard_button_height"
                 android:layout_alignParentTop="true"
-
                 android:background="@drawable/lounge_background"
                 android:orientation="horizontal"
                 android:tileMode="repeat">
@@ -44,8 +43,10 @@
                         android:layout_height="@dimen/standard_button_height"
                         android:layout_alignParentStart="true"
                         android:adjustViewBounds="true"
+                        android:visibility="gone"
                         android:background="@android:color/transparent"
                         android:scaleType="centerInside"
+                        android:tint="?wallBackground"
                         android:src="@drawable/ic_keyboard_arrow_left_black_24dp" />
                 </RelativeLayout>
             </RelativeLayout>
